incubator/spotweb/0.0.20/README.md
# spotweb

![Version: 0.0.20](https://img.shields.io/badge/Version-0.0.20-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: php8.1](https://img.shields.io/badge/AppVersion-php8.1-informational?style=flat-square)

Spotweb is a decentralized usenet community based on the Spotnet protocol.

**Homepage:** <https://github.com/truecharts/apps/master/charts/incubator/spotweb>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/spotweb/spotweb>
* <https://hub.docker.com/r/jgeusebroek/spotweb>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org/ | postgresql | 6.0.27 |
| https://truecharts.org | common | 8.9.18 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.SPOTWEB_CRON_RETRIEVE | string | `"*/15 * * * *"` |  |
| envTpl.SPOTWEB_DB_NAME | string | `"{{ .Values.postgresql.postgresqlDatabase }}"` |  |
| envTpl.SPOTWEB_DB_PORT | string | `"5432"` |  |
| envTpl.SPOTWEB_DB_TYPE | string | `"pdo_pgsql"` |  |
| envTpl.SPOTWEB_DB_USER | string | `"{{ .Values.postgresql.postgresqlUsername }}"` |  |
| envValueFrom.SPOTWEB_DB_HOST.secretKeyRef.key | string | `"plainhost"` |  |
| envValueFrom.SPOTWEB_DB_HOST.secretKeyRef.name | string | `"dbcreds"` |  |
| envValueFrom.SPOTWEB_DB_PASS.secretKeyRef.key | string | `"postgresql-password"` |  |
| envValueFrom.SPOTWEB_DB_PASS.secretKeyRef.name | string | `"dbcreds"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"jgeusebroek/spotweb"` |  |
| image.tag | string | `"php8.1@sha256:9970d2a23b1bfb3ca7736ed9c544320df843546fc7c76f6e7c0a7034adfe1148"` |  |
| initContainers.1-init-db.command[0] | string | `"php /var/www/spotweb/bin/upgrade-db.php -reset-password admin -set-systemtype single"` |  |
| initContainers.1-init-db.env[0].name | string | `"SPOTWEB_DB_TYPE"` |  |
| initContainers.1-init-db.env[0].value | string | `"pdo_pgsql"` |  |
| initContainers.1-init-db.env[1].name | string | `"SPOTWEB_DB_NAME"` |  |
| initContainers.1-init-db.env[1].value. | string | `nil` |  |
| initContainers.1-init-db.env[2].name | string | `"SPOTWEB_DB_USER"` |  |
| initContainers.1-init-db.env[2].value. | string | `nil` |  |
| initContainers.1-init-db.env[3].name | string | `"SPOTWEB_DB_PORT"` |  |
| initContainers.1-init-db.env[3].value | string | `"5432"` |  |
| initContainers.1-init-db.env[4].name | string | `"SPOTWEB_DB_PASS"` |  |
| initContainers.1-init-db.env[4].valueFrom.secretKeyRef.key | string | `"postgresql-password"` |  |
| initContainers.1-init-db.env[4].valueFrom.secretKeyRef.name | string | `"dbcreds"` |  |
| initContainers.1-init-db.env[5].name | string | `"SPOTWEB_DB_HOST"` |  |
| initContainers.1-init-db.env[5].valueFrom.secretKeyRef.key | string | `"plainhost"` |  |
| initContainers.1-init-db.env[5].valueFrom.secretKeyRef.name | string | `"dbcreds"` |  |
| initContainers.1-init-db.image | string | `"{{ .Values.image.repository }}:{{ .Values.image.tag }}"` |  |
| initContainers.1-init-db.securityContext.allowPrivilegeEscalation | bool | `false` |  |
| initContainers.1-init-db.securityContext.readOnlyRootFilesystem | bool | `false` |  |
| initContainers.1-init-db.securityContext.runAsGroup | int | `0` |  |
| initContainers.1-init-db.securityContext.runAsNonRoot | bool | `false` |  |
| initContainers.1-init-db.securityContext.runAsUser | int | `0` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| podSecurityContext.runAsGroup | int | `0` |  |
| podSecurityContext.runAsUser | int | `0` |  |
| postgresql.enabled | bool | `true` |  |
| postgresql.existingSecret | string | `"dbcreds"` |  |
| postgresql.postgresqlDatabase | string | `"spotweb"` |  |
| postgresql.postgresqlUsername | string | `"spotweb"` |  |
| securityContext.allowPrivilegeEscalation | bool | `false` |  |
| securityContext.readOnlyRootFilesystem | bool | `false` |  |
| securityContext.runAsNonRoot | bool | `false` |  |
| service.main.ports.main.port | int | `11000` |  |
| service.main.ports.main.targetPort | int | `80` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
