incubator/spotweb/0.0.27/README.md
# spotweb

![Version: 0.0.27](https://img.shields.io/badge/Version-0.0.27-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: latest](https://img.shields.io/badge/AppVersion-latest-informational?style=flat-square)

Spotweb is a decentralized usenet community based on the Spotnet protocol.

**Homepage:** <https://github.com/truecharts/apps/master/charts/incubator/spotweb>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/spotweb/spotweb>
* <https://hub.docker.com/r/jgeusebroek/spotweb>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org/ | postgresql | 6.0.27 |
| https://truecharts.org | common | 8.9.18 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.SPOTWEB_CRON_RETRIEVE | string | `"*/15 * * * *"` |  |
| envTpl.SPOTWEB_DB_NAME | string | `"{{ .Values.postgresql.postgresqlDatabase }}"` |  |
| envTpl.SPOTWEB_DB_PORT | string | `"5432"` |  |
| envTpl.SPOTWEB_DB_TYPE | string | `"pdo_pgsql"` |  |
| envTpl.SPOTWEB_DB_USER | string | `"{{ .Values.postgresql.postgresqlUsername }}"` |  |
| envValueFrom.SPOTWEB_DB_HOST.secretKeyRef.key | string | `"plainhost"` |  |
| envValueFrom.SPOTWEB_DB_HOST.secretKeyRef.name | string | `"dbcreds"` |  |
| envValueFrom.SPOTWEB_DB_PASS.secretKeyRef.key | string | `"postgresql-password"` |  |
| envValueFrom.SPOTWEB_DB_PASS.secretKeyRef.name | string | `"dbcreds"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"jgeusebroek/spotweb"` |  |
| image.tag | string | `"latest@sha256:a92edf244cbb794fb5cd10d8b3ff808cbf7c0b689bbc01cb9911288f1b467518"` |  |
| initContainers.spotweb-init-db.args[0] | string | `"-f"` |  |
| initContainers.spotweb-init-db.args[1] | string | `"/var/www/spotweb/bin/upgrade-db.php"` |  |
| initContainers.spotweb-init-db.args[2] | string | `"-reset-password admin -set-systemtype single"` |  |
| initContainers.spotweb-init-db.command[0] | string | `"php"` |  |
| initContainers.spotweb-init-db.env[0].name | string | `"SPOTWEB_DB_TYPE"` |  |
| initContainers.spotweb-init-db.env[0].value | string | `"pdo_pgsql"` |  |
| initContainers.spotweb-init-db.env[1].name | string | `"SPOTWEB_DB_NAME"` |  |
| initContainers.spotweb-init-db.env[1].value | string | `"{{ .Values.postgresql.postgresqlDatabase }}"` |  |
| initContainers.spotweb-init-db.env[2].name | string | `"SPOTWEB_DB_USER"` |  |
| initContainers.spotweb-init-db.env[2].value | string | `"{{ .Values.postgresql.postgresqlUsername }}"` |  |
| initContainers.spotweb-init-db.env[3].name | string | `"SPOTWEB_DB_PORT"` |  |
| initContainers.spotweb-init-db.env[3].value | string | `"5432"` |  |
| initContainers.spotweb-init-db.env[4].name | string | `"SPOTWEB_DB_PASS"` |  |
| initContainers.spotweb-init-db.env[4].valueFrom.secretKeyRef.key | string | `"postgresql-password"` |  |
| initContainers.spotweb-init-db.env[4].valueFrom.secretKeyRef.name | string | `"dbcreds"` |  |
| initContainers.spotweb-init-db.env[5].name | string | `"SPOTWEB_DB_HOST"` |  |
| initContainers.spotweb-init-db.env[5].valueFrom.secretKeyRef.key | string | `"plainhost"` |  |
| initContainers.spotweb-init-db.env[5].valueFrom.secretKeyRef.name | string | `"dbcreds"` |  |
| initContainers.spotweb-init-db.image | string | `"{{ .Values.image.repository }}:{{ .Values.image.tag }}"` |  |
| initContainers.spotweb-init-db.securityContext.allowPrivilegeEscalation | bool | `false` |  |
| initContainers.spotweb-init-db.securityContext.readOnlyRootFilesystem | bool | `false` |  |
| initContainers.spotweb-init-db.securityContext.runAsGroup | int | `0` |  |
| initContainers.spotweb-init-db.securityContext.runAsNonRoot | bool | `false` |  |
| initContainers.spotweb-init-db.securityContext.runAsUser | int | `0` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| podSecurityContext.runAsGroup | int | `0` |  |
| podSecurityContext.runAsUser | int | `0` |  |
| postgresql.enabled | bool | `true` |  |
| postgresql.existingSecret | string | `"dbcreds"` |  |
| postgresql.postgresqlDatabase | string | `"spotweb"` |  |
| postgresql.postgresqlUsername | string | `"spotweb"` |  |
| securityContext.allowPrivilegeEscalation | bool | `false` |  |
| securityContext.readOnlyRootFilesystem | bool | `false` |  |
| securityContext.runAsNonRoot | bool | `false` |  |
| service.main.ports.main.port | int | `11000` |  |
| service.main.ports.main.targetPort | int | `80` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
